@@ -4,7 +4,11 @@ import com.vena.learning.model.Course;
 import lombok.Data;
 
 import lombok.Data;
+
+import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Data
 public class CourseResponse {
@@ -23,9 +27,12 @@ public class CourseResponse {
         this.isApproved = course.isApproved();
         this.isComplete = course.isComplete();
         this.instructorName = course.getInstructor().getName();
-        this.modules = course.getModules().stream()
-                .map(ModuleResponse::new)
-                .toList();
+        this.modules = course.getModules() != null
+                ? course.getModules().stream()
+                .map(ModuleResponse::new) // Convert Module to ModuleResponse
+                .sorted(Comparator.comparingInt(ModuleResponse::getSequence)) // Then sort
+                .collect(Collectors.toList())
+                : new ArrayList<>();
     }
 
 }
